# g729-codec-service

./: .editorconfig  .gitignore  Dockerfile  LICENSE  README.md  meson.build
deploy/docker-compose/: docker-compose.yml
deploy/kubernetes/: deployment.yaml
docs/: websocket-api.md
src/: AudioFrame.cpp  AudioFrame.hpp  Codec.hpp  G729CodecService.cpp  G729Decoder.cpp  G729Decoder.hpp  G729Encoder.cpp  G729Encoder.hpp  G729ToMulaw.cpp  G729ToMulaw.hpp  LogUtils.hpp  MulawDecoder.cpp  MulawDecoder.hpp  MulawEncoder.cpp  MulawEncoder.hpp  MulawToG729.cpp  MulawToG729.hpp  NetworkOptions.hpp  TLSOptions.hpp  VADCodec.hpp  bcg729-extern.h  g711_extern.h  g711u.c  g711u.h  resource-messages.h
subprojects/: bcg729.wrap  spdlog.wrap  usockets.wrap  uwebsockets.wrap
